# pydoit-nb

./: .copier-answers.yml  .gitignore  .readthedocs.yaml  LICENCE  README.md  TODO.md  pyproject.toml
.github/workflows/: bump.yaml  ci.yaml  install.yaml  release.yaml
changelog/: 2.trivial.md  3.feature.md  4.trivial.md  5.fix.md  6.fix.md  9.fix.md  README.md
docs/source/: changelog.md  conf.py  development.md  getting_started.md  index.md  notebooks.md
docs/source/api/: pydoit_nb.attrs_helpers.rst  pydoit_nb.checklist.rst  pydoit_nb.complete.rst  pydoit_nb.config_handling.rst  pydoit_nb.config_helpers.rst  pydoit_nb.config_tools.rst  pydoit_nb.display.rst  pydoit_nb.doit_tools.rst  pydoit_nb.notebook.rst  pydoit_nb.notebook_run.rst  pydoit_nb.notebook_step.rst  pydoit_nb.operations.rst  pydoit_nb.rst  pydoit_nb.serialization.rst  pydoit_nb.tasks_copy_source.rst  pydoit_nb.tasks_generation.rst  pydoit_nb.testing.rst  pydoit_nb.typing.rst
docs/source/notebooks/: basic-demo.py
scripts/: test-install.py
src/pydoit_nb/: __init__.py  attrs_helpers.py  checklist.py  config_handling.py  config_helpers.py  display.py  notebook.py  notebook_run.py  notebook_step.py  operations.py  serialization.py  tasks_copy_source.py  tasks_generation.py  testing.py  typing.py
tests/: conftest.py
tests/integration/: test_doit_integration.py  test_notebook_run_integration.py  test_notebook_step_integration.py  test_type_hints.py
tests/integration/test_doit_integration/: test_task_display.txt
tests/test-data/example-project/: README.md  dodo.py  example-project-config.yaml  local_config.py  local_plot.py  pyproject.toml  zenodo.json
tests/test-data/example-project/notebooks/: 001_set-seed.py  011_make-draws.py  012_scale-draws.py  020_retrieve-data.py  110_make-plots.py
tests/test-data/example-project/src/local/: config.py
tests/test-data/example-project/src/local/notebook_steps/: __init__.py  make_draws.py  retrieve_data.py  set_seed.py
tests/test-data/type-hinting/serialization/: simple.case
tests/unit/: test_attrs_helpers.py  test_checklist.py  test_complete.py  test_config_handling.py  test_config_helpers.py  test_doit_tools.py  test_notebook.py  test_notebook_run.py  test_operations.py  test_serialization.py  test_tasks_copy_source.py  test_tasks_generation.py
tests/unit/test_tasks_generation/: test_generate_all_tasks.txt
